Update local mode
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@136997 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/directive/devices/alarm.html
+++ b/local/directive/devices/alarm.html
@@ -1,15 +1,15 @@
 <div class="alarm-device-wrap">
   <div class="alarm-header">
-    <img ng-src="{{alarmIcon}}" class="device-icon">
+    <img ng-src="{{alarmCtrl.deviceIcon}}" class="device-icon" ng-click="alarmCtrl.setDeviceToAlarmCfgToggle(alarmCtrl.deviceObj.id)" title="toggle add sensor">
     <div class="alarm-header-info">
-      <p>{{::ainfo.name}}</p>
-      <p>{{::ainfo.module}}</p>
-      <p>{{::ainfo.state}}</p>
+      <p>{{::alarmCtrl.deviceObj.name}}</p>
+      <p>{{::alarmCtrl.deviceObj.module}}</p>
+      <p>{{::alarmCtrl.deviceObj.state}}</p>
     </div>
   </div>
 
-  <div class="alarm-footer" ng-class="{'alarm-footer-active': added, 'alarm-footer-inactive': !added}" ng-click="toggleAddSensor(ainfo.id)">
-    <span class="alarm-btn" ng-show="added">Sensor added</span>
-    <span class="alarm-btn" ng-show="!added">Add sensor</span>
+  <div class="alarm-footer" ng-class="{'alarm-footer-active': alarmCtrl.inAlarmConfig}" ng-click="alarmCtrl.setDeviceToAlarmCfgToggle(alarmCtrl.deviceObj.id)">
+    <span class="alarm-btn" ng-show="alarmCtrl.inAlarmConfig">Sensor added</span>
+    <span class="alarm-btn" ng-show="!alarmCtrl.inAlarmConfig">Add sensor</span>
   </div>
 </div>
