--- a/local/directive/devices/remote.html
+++ b/local/directive/devices/remote.html
@@ -1,146 +1,158 @@
-<div class="device-wrap" ng-class="{'full-remote': fullRemote, 'learning-mode': learningMode}">
+<div class="device-wrap" ng-class="{'learning-mode': remoteCtrl.remoteLearningMode}">
+  <!-- favorites -->
   <span class="device-add-to-favorites">
-    <input type="checkbox" id="add-to-favorites-{{::tvinfo.id}}" ng-model="tvinfo.favorites" ng-change="toggleAddToFavorites(tvinfo.favorites, tvinfo.id)">
-    <label for="add-to-favorites-{{::tvinfo.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
+    <input type="checkbox" id="add-to-favorites-{{::remoteCtrl.deviceObj.id}}" ng-model="remoteCtrl.deviceObj.favorites" ng-change="remoteCtrl.toggleDeviceFavorites(remoteCtrl.deviceObj.id, remoteCtrl.deviceObj.favorites)">
+    <label for="add-to-favorites-{{::remoteCtrl.deviceObj.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
   </span>
-  <img ng-src="img/button/schedule.svg" class="device-schedule-btn" ng-click="deviceSchedule = !deviceSchedule" title="quick schedule">
+  <!-- schedule -->
+  <img ng-src="img/button/schedule.svg" class="device-schedule-btn" title="quick schedule">
+  <!-- dev info -->
   <div class="device-header">
-    <img ng-src="img/device/remote.png" class="device-icon" ng-click="fullRemote = true" title="full remote">
+    <img ng-src="img/device/remote.png" class="device-icon" title="full remote">
     <div class="device-content-data">
-      <p>{{::tvinfo.name}}</p>
-      <p>{{::tvinfo.type}}</p>
+      <p>{{::remoteCtrl.deviceObj.name}}</p>
+      <p>{{::remoteCtrl.deviceObj.type}}</p>
       <div class="remote-learn-wrap">
-        <input type="checkbox" id="learning-mode-{{::tvinfo.count}}" ng-model="learningMode">
-        <label for="learning-mode-{{::tvinfo.count}}" class="button">Learning mode</label>
+        <input type="checkbox" id="learning-mode-{{::remoteCtrl.deviceObj.count}}" ng-model="remoteCtrl.remoteLearningMode">
+        <label for="learning-mode-{{::remoteCtrl.deviceObj.count}}" class="button">
+          Learning mode
+        </label>
       </div>
     </div>
   </div>
-
+  <!-- dev footer -->
   <div class="device-footer">
+    <!-- quick keys -->
     <div class="device-footer-btn-wrap">
-      <button class="device-btn" ng-class="{'device-btn-active': ''}" ng-click="cRemoteAction(tvinfo.id, 'POWER')" id="remote-quick-POWER">Power</button>
+      <button class="device-btn" data-remote-key="POWER" name="remote-quick-btn">
+        Power
+      </button>
     </div>
     <div class="device-footer-option-wrap">
-      <button class="remote-device-btn remote-device-btn-up" ng-click="cRemoteAction(tvinfo.id, 'CHUP')" id="remote-quick-CHUP" ng-show="quickRadioBtn === 'ch'" title="channel down"></button>
-      <button class="remote-device-btn remote-device-btn-up" ng-click="cRemoteAction(tvinfo.id, 'VOLUP')" id="remote-quick-VOLUP" ng-show="quickRadioBtn === 'vol'" title="volume up"></button>
+      <button class="remote-device-btn remote-device-btn-up" data-remote-key="CHUP" name="remote-quick-btn"></button>
+      <button class="remote-device-btn remote-device-btn-up hidden" data-remote-key="VOLUP" name="remote-quick-btn"></button>
+
       <span class="remote-radio-wrap">
-        <input type="radio" name="remote-ch-vol-{{::tvinfo.count}}" id="remote-radio-ch-{{::tvinfo.count}}" value="ch" ng-model="quickRadioBtn">
-        <label for="remote-radio-ch-{{::tvinfo.count}}">CH</label>
+        <input type="radio" name="remote-ch-vol-{{::remoteCtrl.deviceObj.count}}" id="remote-radio-ch-{{::remoteCtrl.deviceObj.count}}" value="ch" ng-model="remoteCtrl.quickKeysRadioValue">
+        <label for="remote-radio-ch-{{::remoteCtrl.deviceObj.count}}">CH</label>
       </span>
       <span class="remote-radio-wrap">
-        <input type="radio" name="remote-ch-vol-{{::tvinfo.count}}" id="remote-radio-vol-{{::tvinfo.count}}" value="vol" ng-model="quickRadioBtn">
-        <label for="remote-radio-vol-{{::tvinfo.count}}">Vol</label>
+        <input type="radio" name="remote-ch-vol-{{::remoteCtrl.deviceObj.count}}" id="remote-radio-vol-{{::remoteCtrl.deviceObj.count}}" value="vol" ng-model="remoteCtrl.quickKeysRadioValue">
+        <label for="remote-radio-vol-{{::remoteCtrl.deviceObj.count}}">Vol</label>
       </span>
-      <button class="remote-device-btn remote-device-btn-down" ng-click="cRemoteAction(tvinfo.id, 'CHDOWN')" id="remote-quick-CHDOWN" ng-show="quickRadioBtn === 'ch'" title="channel down"></button>
-      <button class="remote-device-btn remote-device-btn-down" ng-click="cRemoteAction(tvinfo.id, 'VOLDOWN')" id="remote-quick-VOLDOWN" ng-show="quickRadioBtn === 'vol'" title="volume down"></button>
+
+      <button class="remote-device-btn remote-device-btn-down" data-remote-key="CHDOWN" name="remote-quick-btn"></button>
+      <button class="remote-device-btn remote-device-btn-down hidden" data-remote-key="VOLDOWN" name="remote-quick-btn"></button>
     </div>
   </div>
 
   <!-- full remote !-->
-  <div class="remote-full-wrap" ng-show="fullRemote || learningMode">
-    <img src="img/button/cross-dark.png" class="close-device-options" ng-click="fullRemote = false; learningMode = false">
+  <div class="remote-full-wrap hidden" id="remote-full">
+    <img src="img/button/cross-dark.png" class="close-device-options">
+
     <div class="remote-full-row">
-      <button type="button" class="remote-top-btn remote-power-btn" ng-click="cRemoteAction(tvinfo.id, 'POWER')" id="remote-POWER">Power</button>
-      <button type="button" class="remote-top-btn remote-menu-btn" ng-click="cRemoteAction(tvinfo.id, 'MENU')" id="remote-MENU">Menu</button>
-      <button type="button" class="remote-top-btn remote-source-btn" ng-click="cRemoteAction(tvinfo.id, 'SOURCE')" id="remote-SOURCE">Source</button>
+      <button type="button" class="remote-top-btn remote-power-btn" name="remote-btn" data-remote-key="POWER">Power</button>
+      <button type="button" class="remote-top-btn remote-menu-btn" name="remote-btn" data-remote-key="MENU">Menu</button>
+      <button type="button" class="remote-top-btn remote-source-btn" name="remote-btn" data-remote-key="SOURCE">Source</button>
     </div>
-    <h5>{{::tvinfo.name}} remote</h5>
-    <div class="remote-full-row" ng-hide="numpad">
+
+    <h5>{{::remoteCtrl.deviceObj.name}} remote</h5>
+
+    <div class="remote-full-row" id="remote-not-numpad">
       <div>
-        <button type="button" class="remote-cirucal-btn remote-plus-btn" ng-click="cRemoteAction(tvinfo.id, 'VOLUP')" id="remote-VOLUP"></button>
+        <button type="button" class="remote-cirucal-btn remote-plus-btn" name="remote-btn" data-remote-key="VOLUP"></button>
         <h5>Vol</h5>
-        <button type="button" class="remote-cirucal-btn remote-minus-btn" ng-click="cRemoteAction(tvinfo.id, 'VOLDOWN')" id="remote-VOLDOWN"></button>
+        <button type="button" class="remote-cirucal-btn remote-minus-btn" name="remote-btn" data-remote-key="VOLDOWN"></button>
       </div>
 
       <div>
-        <button type="button" class="remote-rect-btn remote-up-btn" ng-click="cRemoteAction(tvinfo.id, 'UP')" id="remote-UP"></button>
+        <button type="button" class="remote-rect-btn remote-up-btn" name="remote-btn" data-remote-key="UP"></button>
         <div>
-          <button type="button" class="remote-rect-btn remote-left-btn" ng-click="cRemoteAction(tvinfo.id, 'LEFT')" id="remote-LEFT"></button>
-          <button type="button" class="remote-none-btn remote-ok-btn" ng-click="cRemoteAction(tvinfo.id, 'OK')" id="remote-OK">OK</button>
-          <button type="button" class="remote-rect-btn remote-right-btn" ng-click="cRemoteAction(tvinfo.id, 'RIGHT')" id="remote-RIGHT"></button>
+          <button type="button" class="remote-rect-btn remote-left-btn" name="remote-btn" data-remote-key="LEFT"></button>
+          <button type="button" class="remote-none-btn remote-ok-btn" name="remote-btn" data-remote-key="OK">OK</button>
+          <button type="button" class="remote-rect-btn remote-right-btn" name="remote-btn" data-remote-key="RIGHT"></button>
         </div>
-        <button type="button" class="remote-rect-btn remote-down-btn" ng-click="cRemoteAction(tvinfo.id, 'DOWN')" id="remote-DOWN"></button>
+        <button type="button" class="remote-rect-btn remote-down-btn" name="remote-btn" data-remote-key="DOWN"></button>
       </div>
 
       <div>
-        <button type="button" class="remote-cirucal-btn remote-plus-btn" ng-click="cRemoteAction(tvinfo.id, 'CHUP')" id="remote-CHUP"></button>
+        <button type="button" class="remote-cirucal-btn remote-plus-btn" name="remote-btn" data-remote-key="CHUP"></button>
         <h5>CH</h5>
-        <button type="button" class="remote-cirucal-btn remote-minus-btn" ng-click="cRemoteAction(tvinfo.id, 'CHDOWN')" id="remote-CHDOWN"></button>
+        <button type="button" class="remote-cirucal-btn remote-minus-btn" name="remote-btn" data-remote-key="CHDOWN"></button>
       </div>
     </div>
 
     <!-- numpad !-->
-    <div class="remote-full-col" ng-show="numpad">
+    <div class="remote-full-col numpad-wrap hidden" id="remote-numpad">
       <div>
-        <button type="button" class="remote-numb-btn remote-num1-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_1')" id="remote-NUM_1">1</button>
-        <button type="button" class="remote-numb-btn remote-num2-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_2')" id="remote-NUM_2">2</button>
-        <button type="button" class="remote-numb-btn remote-num3-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_3')" id="remote-NUM_3">3</button>
+        <button type="button" class="remote-numb-btn remote-num1-btn" name="remote-btn" data-remote-key="NUM_1">1</button>
+        <button type="button" class="remote-numb-btn remote-num2-btn" name="remote-btn" data-remote-key="NUM_2">2</button>
+        <button type="button" class="remote-numb-btn remote-num3-btn" name="remote-btn" data-remote-key="NUM_3">3</button>
       </div>
 
       <div>
-        <button type="button" class="remote-numb-btn remote-num4-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_4')" id="remote-NUM_4">4</button>
-        <button type="button" class="remote-numb-btn remote-num5-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_5')" id="remote-NUM_5">5</button>
-        <button type="button" class="remote-numb-btn remote-num6-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_6')" id="remote-NUM_6">6</button>
+        <button type="button" class="remote-numb-btn remote-num4-btn" name="remote-btn" data-remote-key="NUM_4">4</button>
+        <button type="button" class="remote-numb-btn remote-num5-btn" name="remote-btn" data-remote-key="NUM_5">5</button>
+        <button type="button" class="remote-numb-btn remote-num6-btn" name="remote-btn" data-remote-key="NUM_6">6</button>
       </div>
 
       <div>
-        <button type="button" class="remote-numb-btn remote-num7-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_7')" id="remote-NUM_7">7</button>
-        <button type="button" class="remote-numb-btn remote-num8-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_8')" id="remote-NUM_8">8</button>
-        <button type="button" class="remote-numb-btn remote-num9-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_9')" id="remote-NUM_9">9</button>
+        <button type="button" class="remote-numb-btn remote-num7-btn" name="remote-btn" data-remote-key="NUM_7">7</button>
+        <button type="button" class="remote-numb-btn remote-num8-btn" name="remote-btn" data-remote-key="NUM_8">8</button>
+        <button type="button" class="remote-numb-btn remote-num9-btn" name="remote-btn" data-remote-key="NUM_9">9</button>
       </div>
 
       <div>
-        <button type="button" class="remote-numb-btn remote-num0-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_0')" id="remote-NUM_0">0</button>
+        <button type="button" class="remote-numb-btn remote-num0-btn" name="remote-btn" data-remote-key="NUM_0">0</button>
       </div>
     </div>
     <div class="remote-full-row">
-      <button type="button" class="remote-none-btn remote-mute-btn" ng-click="cRemoteAction(tvinfo.id, 'MUTE')" id="remote-MUTE"><i class="material-icons" ng-if="!numpad">volume_mute</i></button>
-      <button type="button" class="remote-none-btn remote-numpad-btn" ng-click="numpad = !numpad">Numpad</button>
-      <button type="button" class="remote-none-btn remote-return-btn" ng-click="cRemoteAction(tvinfo.id, 'RETURN')" id="remote-RETURN" ><i class="material-icons" ng-if="!numpad">keyboard_return</i></button>
+      <button type="button" class="remote-none-btn remote-mute-btn" name="remote-btn" data-remote-key="MUTE"><i class="material-icons">volume_mute</i></button>
+      <button type="button" class="remote-none-btn remote-numpad-btn" id="numpad-btn">Numpad</button>
+      <button type="button" class="remote-none-btn remote-return-btn" name="remote-btn" data-remote-key="RETURN"><i class="material-icons">keyboard_return</i></button>
     </div>
 
     <!-- wait for learn button !-->
-    <div class="remote-learn-mode-instructions" ng-if="learnKey">
+    <div class="remote-learn-mode-instructions" ng-if="remoteCtrl.remoteLearnKey">
       <h4>Learn key</h4>
       <div class="remote-learn-mode-key-wrap">
-        <h3>{{learnKey}}</h3>
+        <h3>{{remoteCtrl.remoteLearnKey}}</h3>
       </div>
       <p>Point your physical remote to the nHome Bridge and press the button you want to program</p>
     </div>
   </div>
 
-
   <!-- schedule !-->
-  <div class="option-wrap" ng-show="deviceSchedule">
-    <button type="reset" class="close-device-options close-form-btn" ng-click="deviceSchedule = false">
+  <div class="option-wrap hidden" id="device-schedule-tab">
+    <button type="reset" class="close-device-options close-form-btn">
     </button>
-    <form class="add-schedule-dev-form" id="dev-schedule-form-{{::tvinfo.id}}" ng-submit="quickSchedule(tvinfo, 'POWER')">
+    <form class="add-schedule-dev-form" id="dev-schedule-form-{{::remoteCtrl.deviceObj.id}}">
       <p>Remote will
         <span class="color-blue">toggle</span> TV power at:
       </p>
-      <input type="number" class="form-number" id="device-schedule-hours-{{::tvinfo.id}}" placeholder="Hours" min="0" max="23" required ng-focus="checkHours($event)">
-      <input type="number" class="form-number" id="device-schedule-minutes-{{::tvinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-focus="checkMinutes($event)">
+      <input type="number" class="form-number" placeholder="Hours" min="0" max="23" required>
+      <input type="number" class="form-number" placeholder="Minutes" min="0" max="59" required>
 
       <div class="add-schedule-dev-options-wrap">
         <div class="add-schedule-dev-option">
           <small>Daily</small>
-          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{::tvinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-daily-{{::tvinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
+          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{::remoteCtrl.deviceObj.id}}" ng-model="remoteCtrl.deviceScheduleRepeat">
+          <label for="schedule-device-daily-{{::remoteCtrl.deviceObj.id}}" class="radio-label" title="schedule will repeat daily"></label>
         </div>
         <div class="add-schedule-dev-option">
           <small>Once</small>
-          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{::tvinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-once-{{::tvinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
+          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{::remoteCtrl.deviceObj.id}}" ng-model="remoteCtrl.deviceScheduleRepeat">
+          <label for="schedule-device-once-{{::remoteCtrl.deviceObj.id}}" class="radio-label" title="schedule will fire just once"></label>
         </div>
       </div>
 
-      <small ng-if="scheduleSuccess" class="color-green pop-up">Scheduled!</small>
+      <small ng-show="remoteCtrl.scheduleSuccess" class="color-green pop-up">Scheduled!</small>
     </form>
     <div class="device-footer devices-schedule-footer">
       <div class="device-footer-btn-wrap">
       </div>
       <div class="device-footer-option-wrap">
-        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{::tvinfo.id}}">Schedule</button>
+        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{::remoteCtrl.deviceObj.id}}">Schedule</button>
       </div>
     </div>
   </div>
