--- a/local/directive/devices/scene.html
+++ b/local/directive/devices/scene.html
@@ -1,43 +1,45 @@
 <div class="scene-box">
-  <img ng-src="img/button/schedule.svg" class="scene-quick-schedule-btn" ng-click="deviceSchedule = !deviceSchedule" title="quick schedule">
+  <!-- schedule -->
+  <img ng-src="img/button/schedule.svg" class="scene-quick-schedule-btn" id="device-schedule-btn" title="quick schedule">
+  <!-- dev info -->
   <div class="sce-box-content">
-    <img src="img/device/scene-icon.png" class="device-icon" ng-click="setScene(scinfo.id)">
+    <img src="img/device/scene-icon.png" class="device-icon" ng-click="sceneCtrl.setScene(sceneCtrl.deviceObj.id)">
     <div>
-      <p>{{scinfo.name}}</p>
-      <p>{{scinfo.schedule | date: "dd/MM/yy"}}</p>
+      <p>{{sceneCtrl.deviceObj.name}}</p>
+      <!-- <p>{{sceneCtrl.deviceObj.schedule | date: "dd/MM/yy"}}</p> -->
     </div>
   </div>
-  <div class="sce-box-footer" ng-hide="currentState === 'frame.dashboard'">
-    <p ng-click="editScene(scinfo)">Edit scene</p>
-    <img src="img/button/cross.png" class="scene-delete-btn" ng-click="deleteScene(scinfo.id)">
+  <div class="sce-box-footer">
+    <p ng-click="sceneCtrl.editScene(sceneCtrl.deviceObj)">Edit scene</p>
+    <img src="img/button/cross.png" class="scene-delete-btn" ng-click="sceneCtrl.deleteScene(sceneCtrl.deviceObj.id)">
   </div>
 
   <!-- schedule !-->
-  <div class="option-wrap" ng-show="deviceSchedule">
-    <button type="reset" class="close-device-options close-form-btn" ng-click="deviceSchedule = false">
+  <div class="option-wrap hidden" id="device-schedule-tab">
+    <button type="reset" class="close-device-options close-form-btn">
     </button>
-    <form class="add-schedule-dev-form" id="dev-schedule-form-{{::scinfo.id}}" ng-submit="quickSchedule(scinfo)">
+    <form class="add-schedule-dev-form" id="dev-schedule-form-{{::sceneCtrl.deviceObj.id}}" ng-submit="quickSchedule(sceneCtrl.deviceObj)">
       <p>Scene will turn
         <span class="color-blue">trigger</span>
         at:
       </p>
-      <input type="number" class="form-number" id="device-schedule-hours-{{::scinfo.id}}" placeholder="Hours" min="0" max="23" required ng-focus="checkHours($event)">
-      <input type="number" class="form-number" id="device-schedule-minutes-{{::scinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-focus="checkMinutes($event)">
+      <input type="number" class="form-number" placeholder="Hours" min="0" max="23" required>
+      <input type="number" class="form-number" placeholder="Minutes" min="0" max="59" required>
 
       <div class="add-schedule-dev-options-wrap">
         <div class="add-schedule-dev-option">
           <small>Daily</small>
-          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{::scinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-daily-{{::scinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
+          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{::sceneCtrl.deviceObj.id}}" ng-model="sceneCtrl.deviceScheduleRepeat">
+          <label for="schedule-device-daily-{{::sceneCtrl.deviceObj.id}}" class="radio-label" title="schedule will repeat daily"></label>
         </div>
         <div class="add-schedule-dev-option">
           <small>Once</small>
-          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{::scinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-once-{{::scinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
+          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{::sceneCtrl.deviceObj.id}}" ng-model="sceneCtrl.deviceScheduleRepeat">
+          <label for="schedule-device-once-{{::sceneCtrl.deviceObj.id}}" class="radio-label" title="schedule will fire just once"></label>
         </div>
       </div>
 
-      <small ng-if="scheduleSuccess" class="color-green pop-up">Scheduled!</small>
+      <small ng-show="sceneCtrl.scheduleSuccess" class="color-green pop-up">Scheduled!</small>
     </form>
 
     <div class="device-footer devices-schedule-footer">
@@ -45,7 +47,7 @@
 
       </div>
       <div class="device-footer-option-wrap">
-        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{::scinfo.id}}">Schedule</button>
+        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{::sceneCtrl.deviceObj.id}}">Schedule</button>
       </div>
     </div>
   </div>
