--- a/local/directive/devices/switch.html
+++ b/local/directive/devices/switch.html
@@ -1,65 +1,67 @@
 <div class="device-wrap">
+  <!-- favorites btn -->
   <span class="device-add-to-favorites">
-    <input type="checkbox" id="add-to-favorites-{{::sinfo.id}}" ng-model="sinfo.favorites" ng-change="toggleAddToFavorites(sinfo.favorites, sinfo.id)">
-    <label for="add-to-favorites-{{::sinfo.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
+    <input type="checkbox" id="add-to-favorites-{{::switchCtrl.deviceObj.id}}" ng-model="switchCtrl.deviceObj.favorites" ng-change="switchCtrl.toggleDeviceFavorites(switchCtrl.deviceObj.id, switchCtrl.deviceObj.favorites)">
+    <label for="add-to-favorites-{{::switchCtrl.deviceObj.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
   </span>
-  <img ng-src="img/button/schedule.svg" class="device-schedule-btn" ng-click="deviceSchedule = !deviceSchedule" title="quick schedule">
-
+  <!-- schedule -->
+  <img ng-src="img/button/schedule.svg" class="device-schedule-btn" title="quick schedule">
+  <!-- dev info -->
   <div class="device-header">
-    <img ng-src="{{switchIcon}}" class="device-icon" ng-click="toggleDevicePowerState(sinfo.id)" title="toggle state">
+    <img ng-src="{{switchCtrl.deviceIcon}}" class="device-icon" ng-click="switchCtrl.toggleDevicePowerState(switchCtrl.deviceObj.id)" title="toggle state">
     <div class="device-content-data">
-      <p>{{::sinfo.name}}</p>
-      <p>{{::sinfo.type}}</p>
-      <p>{{::sinfo.module}}</p>
+      <p>{{::switchCtrl.deviceObj.name}}</p>
+      <p>{{::switchCtrl.deviceObj.type}}</p>
+      <p>{{::switchCtrl.deviceObj.module}}</p>
     </div>
   </div>
 
   <!-- display ON/OFF switch !-->
   <div class="device-footer">
     <div class="device-footer-btn-wrap">
-      <button class="device-btn" ng-class="{'device-btn-active': sinfo.value}" ng-click="switchOn(sinfo.id, sinfo.value)">On</button>
-      <button class="device-btn" ng-class="{'device-btn-active': !sinfo.value}" ng-click="switchOff(sinfo.id, sinfo.value)">Off</button>
+      <button class="device-btn" ng-class="{'device-btn-active': switchCtrl.deviceObj.value}" ng-click="switchCtrl.setSwitchPowerStateOn(switchCtrl.deviceObj.id)">On</button>
+      <button class="device-btn" ng-class="{'device-btn-active': !switchCtrl.deviceObj.value}" ng-click="switchCtrl.setSwitchPowerStateOff(switchCtrl.deviceObj.id)">Off</button>
     </div>
     <div class="device-footer-option-wrap">
     </div>
   </div>
 
   <!-- schedule !-->
-  <div class="option-wrap" ng-show="deviceSchedule">
-    <button type="reset" class="close-device-options close-form-btn" ng-click="deviceSchedule = false">
+  <div class="option-wrap hidden" id="device-schedule-tab">
+    <button type="reset" class="close-device-options close-form-btn">
     </button>
-    <form class="add-schedule-dev-form" id="dev-schedule-form-{{::sinfo.id}}" ng-submit="quickSchedule(sinfo, scheduleState)">
+    <form class="add-schedule-dev-form" id="dev-schedule-form-{{::switchCtrl.deviceObj.id}}">
       <p>Device will turn
-        <span class="color-blue" ng-if="scheduleState">ON</span>
-        <span class="color-orange" ng-if="!scheduleState">OFF</span>
+        <span class="color-blue" ng-show="switchCtrl.scheduleState">ON</span>
+        <span class="color-orange" ng-show="!switchCtrl.scheduleState">OFF</span>
         at:
       </p>
-      <input type="number" class="form-number" id="device-schedule-hours-{{::sinfo.id}}" placeholder="Hours" min="0" max="23" required ng-focus="checkHours($event)">
-      <input type="number" class="form-number" id="device-schedule-minutes-{{::sinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-focus="checkMinutes($event)">
+      <input type="number" class="form-number" placeholder="Hours" min="0" max="23" required>
+      <input type="number" class="form-number" placeholder="Minutes" min="0" max="59" required>
 
       <div class="add-schedule-dev-options-wrap">
         <div class="add-schedule-dev-option">
           <small>Daily</small>
-          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{::sinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-daily-{{::sinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
+          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{::switchCtrl.deviceObj.id}}" ng-model="switchCtrl.deviceScheduleRepeat">
+          <label for="schedule-device-daily-{{::switchCtrl.deviceObj.id}}" class="radio-label" title="schedule will repeat daily"></label>
         </div>
         <div class="add-schedule-dev-option">
           <small>Once</small>
-          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{::sinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-once-{{::sinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
+          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{::switchCtrl.deviceObj.id}}" ng-model="switchCtrl.deviceScheduleRepeat">
+          <label for="schedule-device-once-{{::switchCtrl.deviceObj.id}}" class="radio-label" title="schedule will fire just once"></label>
         </div>
       </div>
 
-      <small ng-if="scheduleSuccess" class="color-green pop-up">Scheduled!</small>
+      <small ng-show="switchCtrl.scheduleSuccess" class="color-green pop-up">Scheduled!</small>
     </form>
 
     <div class="device-footer devices-schedule-footer">
       <div class="device-footer-btn-wrap">
-        <button type="button" class="device-btn" ng-class="{'device-btn-active': scheduleState}" ng-click="scheduleState = true">On</button>
-        <button type="button" class="device-btn" ng-class="{'device-btn-active': !scheduleState}" ng-click="scheduleState = false">Off</button>
+        <button type="button" class="device-btn" ng-class="{'device-btn-active': switchCtrl.scheduleState}" ng-click="switchCtrl.scheduleState = true">On</button>
+        <button type="button" class="device-btn" ng-class="{'device-btn-active': !switchCtrl.scheduleState}" ng-click="switchCtrl.scheduleState = false">Off</button>
       </div>
       <div class="device-footer-option-wrap">
-        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{::sinfo.id}}">Schedule</button>
+        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{::switchCtrl.deviceObj.id}}">Schedule</button>
       </div>
     </div>
   </div>
