--- a/local/directive/devices/shutter.html
+++ b/local/directive/devices/shutter.html
@@ -1,64 +1,66 @@
 <div class="device-wrap">
+  <!-- favorites -->
   <span class="device-add-to-favorites">
-    <input type="checkbox" id="add-to-favorites-{{::shinfo.id}}" ng-model="shinfo.favorites" ng-change="toggleAddToFavorites(shinfo.favorites, shinfo.id)">
-    <label for="add-to-favorites-{{::shinfo.id}}" class="device-add-to-favorites-label" title="add to favorites" ng-click="bbb()"></label>
+    <input type="checkbox" id="add-to-favorites-{{::shutterCtrl.deviceObj.id}}" ng-model="shutterCtrl.deviceObj.favorites" ng-change="shutterCtrl.toggleDeviceFavorites(shutterCtrl.deviceObj.id, shutterCtrl.deviceObj.favorites)">
+    <label for="add-to-favorites-{{::shutterCtrl.deviceObj.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
   </span>
-  <img ng-src="img/button/schedule.svg" class="device-schedule-btn" ng-click="deviceSchedule = !deviceSchedule" title="quick schedule">
-
+  <!-- schedule -->
+  <img ng-src="img/button/schedule.svg" class="device-schedule-btn" id="device-schedule-btn" title="quick schedule">
+  <!-- dev info -->
   <div class="device-header">
-    <img ng-src="{{shutterIcon}}" class="device-icon">
+    <img ng-src="{{shutterCtrl.deviceIcon}}" class="device-icon" ng-click="shutterCtrl.toggleShutterState(shutterCtrl.deviceObj.id)" title="toggle shutter">
     <div class="device-content-data">
-      <p>{{::shinfo.name}}</p>
-      <p>{{::shinfo.type}}</p>
-      <p>{{::shinfo.module}}</p>
+      <p>{{::shutterCtrl.deviceObj.name}}</p>
+      <p>{{::shutterCtrl.deviceObj.type}}</p>
+      <p>{{::shutterCtrl.deviceObj.module}}</p>
     </div>
   </div>
 
-  <!-- display +/- set thermostat !-->
+  <!-- display action buttons !-->
   <div class="device-footer">
     <div class="device-footer-btn-wrap">
-      <button class="device-btn-opt" ng-click="openShutter(shinfo)" ng-class="{'success-green': openSuccess}">Open</button>
-      <butotn class="device-btn-opt" ng-click="stopShutter(shinfo)" ng-class="{'success-red': stopSuccess}">STOP</butotn>
-      <button class="device-btn-opt" ng-click="closeShutter(shinfo)" ng-class="{'success-green': closeSuccess}">Close</button>
+      <button class="device-btn-opt" ng-click="shutterCtrl.setShutterStateOpen(shutterCtrl.deviceObj.id)" ng-class="{'success-green': shutterCtrl.openShutterSuccess}">Open</button>
+      <butotn class="device-btn-opt" ng-click="shutterCtrl.setShutterStateStop(shutterCtrl.deviceObj.id)" ng-class="{'success-red': shutterCtrl.stopShutterSuccess}">STOP</butotn>
+      <button class="device-btn-opt" ng-click="shutterCtrl.setShutterStateClose(shutterCtrl.deviceObj.id)" ng-class="{'success-green': shutterCtrl.closeShutterSuccess}">Close</button>
     </div>
   </div>
 
   <!-- schedule !-->
-  <div class="option-wrap" ng-show="deviceSchedule">
-    <button type="reset" class="close-device-options close-form-btn" ng-click="deviceSchedule = false">
+  <div class="option-wrap hidden" id="device-schedule-tab">
+    <button type="reset" class="close-device-options close-form-btn">
     </button>
-    <form class="add-schedule-dev-form" id="dev-schedule-form-{{::shinfo.id}}" ng-submit="quickSchedule(shinfo, shutterState)">
+    <form class="add-schedule-dev-form" id="dev-schedule-form-{{::shutterCtrl.deviceObj.id}}">
       <p>Shutter will
-        <span ng-show="shutterState === 'open'" class="color-blue">open</span>
-        <span ng-show="shutterState === 'close'" class="color-orange">close</span>
+        <span ng-show="shutterCtrl.scheduleState " class="color-blue">open</span>
+        <span ng-show="!shutterCtrl.scheduleState" class="color-orange">close</span>
         at:
       </p>
-      <input type="number" class="form-number" id="device-schedule-hours-{{::shinfo.id}}" placeholder="Hours" min="0" max="23" required ng-focus="checkHours($event)">
-      <input type="number" class="form-number" id="device-schedule-minutes-{{::shinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-focus="checkMinutes($event)">
+      <input type="number" class="form-number" placeholder="Hours" min="0" max="23" required>
+      <input type="number" class="form-number" placeholder="Minutes" min="0" max="59" required>
 
       <div class="add-schedule-dev-options-wrap">
         <div class="add-schedule-dev-option">
           <small>Daily</small>
-          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{::shinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-daily-{{::shinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
+          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{::shutterCtrl.deviceObj.id}}" ng-model="shutterCtrl.deviceScheduleRepeat">
+          <label for="schedule-device-daily-{{::shutterCtrl.deviceObj.id}}" class="radio-label" title="schedule will repeat daily"></label>
         </div>
         <div class="add-schedule-dev-option">
           <small>Once</small>
-          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{::shinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-once-{{::shinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
+          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{::shutterCtrl.deviceObj.id}}" ng-model="shutterCtrl.deviceScheduleRepeat">
+          <label for="schedule-device-once-{{::shutterCtrl.deviceObj.id}}" class="radio-label" title="schedule will fire just once"></label>
         </div>
       </div>
 
-      <small ng-if="scheduleSuccess" class="color-green pop-up">Scheduled!</small>
+      <small ng-show="shutterCtrl.scheduleSuccess" class="color-green pop-up">Scheduled!</small>
     </form>
 
     <div class="device-footer devices-schedule-footer">
       <div class="device-footer-btn-wrap">
-        <button type="button" class="device-btn" ng-click="shutterState = 'open'" ng-class="{'device-btn-active': shutterState === 'open'}">Open</button>
-        <button type="button" class="device-btn" ng-click="shutterState = 'close'" ng-class="{'device-btn-active': shutterState === 'close'}">Close</button>
+        <button type="button" class="device-btn" ng-click="shutterCtrl.scheduleState = true" ng-class="{'device-btn-active': shutterCtrl.scheduleState}">Open</button>
+        <button type="button" class="device-btn" ng-click="shutterCtrl.scheduleState = false" ng-class="{'device-btn-active': !shutterCtrl.scheduleState}">Close</button>
       </div>
       <div class="device-footer-option-wrap">
-        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{::shinfo.id}}">Schedule</button>
+        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{::shutterCtrl.deviceObj.id}}">Schedule</button>
       </div>
     </div>
   </div>
