--- a/local/directive/devices/thermostat.html
+++ b/local/directive/devices/thermostat.html
@@ -1,66 +1,68 @@
 <div class="device-wrap">
+  <!-- favorites -->
   <span class="device-add-to-favorites">
-    <input type="checkbox" id="add-to-favorites-{{::tinfo.id}}" ng-model="tinfo.favorites" ng-change="toggleAddToFavorites(tinfo.favorites, tinfo.id)">
-    <label for="add-to-favorites-{{::tinfo.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
+    <input type="checkbox" id="add-to-favorites-{{::thermostatCtrl.deviceObj.id}}" ng-model="thermostatCtrl.deviceObj.favorites" ng-click="thermostatCtrl.toggleDeviceFavorites(thermostatCtrl.deviceObj.id, thermostatCtrl.deviceObj.favorites)">
+    <label for="add-to-favorites-{{::thermostatCtrl.deviceObj.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
   </span>
-  <img ng-src="img/button/schedule.svg" class="device-schedule-btn" ng-click="deviceSchedule = !deviceSchedule" title="quick schedule">
-
+  <!-- schedule -->
+  <img ng-src="img/button/schedule.svg" class="device-schedule-btn" id="device-schedule-btn" title="quick schedule">
+<!-- dev info -->
   <div class="device-header">
     <img ng-src="img/device/thermostat.png" class="device-icon">
     <div class="device-content-data">
-      <p>{{::tinfo.name}}</p>
-      <p>{{::tinfo.type}}</p>
-      <p>{{::tinfo.module}}</p>
+      <p>{{::thermostatCtrl.deviceObj.name}}</p>
+      <p>{{::thermostatCtrl.deviceObj.type}}</p>
+      <p>{{::thermostatCtrl.deviceObj.module}}</p>
     </div>
   </div>
 
   <!-- display +/- set thermostat !-->
   <div class="device-footer">
     <div class="device-footer-btn-wrap">
-      <button class="device-btn-opt device-minus-btn" ng-click="tempDown(tinfo)"></button>
-      <butotn class="device-btn-opt" ng-click="setTemp(tinfo)" ng-class="{'success-green': responseSuccess}">
-        <span class="color-blue">{{::tinfo.value}}</span> /
-        <span class="color-green">{{::tinfo.target}}</span>
+      <button class="device-btn-opt device-minus-btn" ng-click="thermostatCtrl.setThermostatTemperatureDown(thermostatCtrl.deviceObj.target)"></button>
+      <butotn class="device-btn-opt" ng-click="thermostatCtrl.setThermostatTemperature(thermostatCtrl.deviceObj.id, thermostatCtrl.deviceObj.target)" ng-class="{'success-green': thermostatCtrl.setTempSuccess}">
+        <span class="color-blue">{{::thermostatCtrl.deviceObj.value}}</span> /
+        <span class="color-green">{{thermostatCtrl.deviceObj.target}}</span>
       </butotn>
-      <button class="device-btn-opt device-plus-btn" ng-click="tempUp(tinfo)"></button>
+      <button class="device-btn-opt device-plus-btn" ng-click="thermostatCtrl.setThermostatTemperatureUp(thermostatCtrl.deviceObj.target)"></button>
     </div>
   </div>
 
   <!-- schedule !-->
-  <div class="option-wrap" ng-show="deviceSchedule">
-    <button type="reset" class="close-device-options close-form-btn" ng-click="deviceSchedule = false">
+  <div class="option-wrap hidden" id="device-schedule-tab">
+    <button type="reset" class="close-device-options close-form-btn">
     </button>
-    <form class="add-schedule-dev-form" id="dev-schedule-form-{{::tinfo.id}}" ng-submit="quickSchedule(tinfo, targetForSchedule)">
+    <form class="add-schedule-dev-form" id="dev-schedule-form-{{::thermostatCtrl.deviceObj.id}}">
       <p>Set thermostat to
-        <span class="color-orange">{{::targetForSchedule}}°</span>
+        <span class="color-orange">{{thermostatCtrl.deviceScheduleTemperature}}°</span>
         at:
       </p>
-      <input type="number" class="form-number" id="device-schedule-hours-{{::tinfo.id}}" placeholder="Hours" min="0" max="23" required ng-focus="checkHours($event)">
-      <input type="number" class="form-number" id="device-schedule-minutes-{{::tinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-focus="checkMinutes($event)">
+      <input type="number" class="form-number" placeholder="Hours" min="0" max="23" required>
+      <input type="number" class="form-number" placeholder="Minutes" min="0" max="59" required>
 
       <div class="add-schedule-dev-options-wrap">
         <div class="add-schedule-dev-option">
           <small>Daily</small>
-          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{::tinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-daily-{{::tinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
+          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{::thermostatCtrl.deviceObj.id}}" ng-model="thermostatCtrl.deviceScheduleRepeat">
+          <label for="schedule-device-daily-{{::thermostatCtrl.deviceObj.id}}" class="radio-label" title="schedule will repeat daily"></label>
         </div>
         <div class="add-schedule-dev-option">
           <small>Once</small>
-          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{::tinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-once-{{::tinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
+          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{::thermostatCtrl.deviceObj.id}}" ng-model="thermostatCtrl.deviceScheduleRepeat">
+          <label for="schedule-device-once-{{::thermostatCtrl.deviceObj.id}}" class="radio-label" title="schedule will fire just once"></label>
         </div>
       </div>
 
-      <small ng-if="scheduleSuccess" class="color-green pop-up">Scheduled!</small>
+      <small ng-show="thermostatCtrl.scheduleSuccess" class="color-green pop-up">Scheduled!</small>
     </form>
 
     <div class="device-footer devices-schedule-footer">
       <div class="device-footer-btn-wrap">
-        <button type="button" class="device-btn device-minus-btn" ng-click="tempDownSchedule(targetForSchedule)"></button>
-        <button type="button" class="device-btn device-plus-btn" ng-click="tempUpSchedule(targetForSchedule)"></button>
+        <button type="button" class="device-btn device-minus-btn" ng-click="thermostatCtrl.setThermostatScheduleTemperatureDown(thermostatCtrl.deviceScheduleTemperature)"></button>
+        <button type="button" class="device-btn device-plus-btn" ng-click="thermostatCtrl.setThermostatScheduleTemperatureUp(thermostatCtrl.deviceScheduleTemperature)"></button>
       </div>
       <div class="device-footer-option-wrap">
-        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{::tinfo.id}}">Schedule</button>
+        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{::thermostatCtrl.deviceObj.id}}">Schedule</button>
       </div>
     </div>
   </div>
